--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -23,7 +23,7 @@ security:
                 success_handler: lexik_jwt_authentication.handler.authentication_success
                 failure_handler: lexik_jwt_authentication.handler.authentication_failure
         api:
-            pattern: ^/api
+            pattern: ^/api/
             stateless: true
             #anonymous: true
             guard:
@@ -46,4 +46,5 @@ security:
     # Note: Only the *first* access control that matches will be used
     access_control:
         - { path: ^/api/login, roles: IS_AUTHENTICATED_ANONYMOUSLY }
+        - { path: ^/api/admin, roles: ["ROLE_Super_Admin"], methods:[POST,GET,PUT,PATCH,DELETE] }
         - { path: ^/api,       roles: IS_AUTHENTICATED_FULLY }
